--- a/app-android/src/main/res/values/gtfs_rts_values.xml
+++ b/app-android/src/main/res/values/gtfs_rts_values.xml
@@ -3,4 +3,5 @@
     <integer name="gtfs_rts_db_version">20250819</integer>
     <string name="gtfs_status_for_poi_authority">@string/gtfs_rts_authority</string>
     <string name="gtfs_rts_contact_us">https://www.edmonton.ca/ets/customer-service</string>
+    <string name="gtfs_rts_fares">https://www.edmonton.ca/ets/fares-passes</string>
 </resources>
